# aria

./: .gitignore  PKGBUILD  README.md  aria-0.1.0-4-any.pkg.tar.zst  aria.install  org.example.MusicPlayer.yml  pyproject.toml
.github/workflows/: build-appimage.yml
data/: org.example.MusicPlayer.desktop.in  org.example.MusicPlayer.metainfo.xml
flatpak/: musicplayer
pkg/aria/: .BUILDINFO  .MTREE  .PKGINFO
pkg/aria/usr/lib/musicplayer/src/musicplayer/: __init__.py  application.py  artwork.py  config.py  db.py  lastfm.py  lyrics.py  metadata.py  models.py  playlists.py
pkg/aria/usr/lib/musicplayer/src/musicplayer/playback/: __init__.py  player.py
pkg/aria/usr/lib/musicplayer/src/musicplayer/ui/: preferences.py  window.py
scripts/: build-appimage.sh
src/musicplayer/: __init__.py  __main__.py  constants.py  main.py  mpris.py
src/musicplayer/playback/: queue.py
tests/: test_core.py
